--- a/National_Football_Team/.project
+++ b/National_Football_Team/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Student DB practice</name>
+	<name>National_Football_Team</name>
 	<comment></comment>
 	<projects>
 	</projects>
