--- a/Student_DB_practice/.project
+++ b/Student_DB_practice/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>National Football Team</name>
+	<name>Student_DB_practice</name>
 	<comment></comment>
 	<projects>
 	</projects>
