--- a/Calse5/.project
+++ b/Calse5/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>gasto_publico</name>
+	<name>Calse5</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -16,7 +16,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1690819121608</id>
+			<id>1690819121584</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
