--- a/CentroComputo/.project
+++ b/CentroComputo/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Libreria</name>
+	<name>CentroComputo</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -16,7 +16,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1695409608540</id>
+			<id>1695409608509</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
